# DoctoPi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pylintrc  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-and-test.yml  python-package.yml
puml/: doctopi.flow.puml  doctopi.formatter.puml  doctopi.parser.puml  doctopi.types.puml
src/doctopi/: README.md  __main__.py
src/doctopi/cli/: README.md  __init__.py  cli.py  default.ini
src/doctopi/formatter/: README.md  __init__.py
src/doctopi/formatter/markdown/: README.md  markdown.py  markdown_builder.py
src/doctopi/formatter/markdown/cmd/: README.md  __init__.py  class_attr_commands.py  class_command.py  docstring_commands.py  function_command.py  param_table_command.py
src/doctopi/formatter/rest/: README.md
src/doctopi/parser/: README.md  __init__.py  parser_factory.py
src/doctopi/parser/cpp/: README.md
src/doctopi/parser/java/: README.md  java_adapter.py
src/doctopi/parser/python/: README.md  __init__.py  docspec_adapter.py  google_adapter.py  python_adapter.py
src/doctopi/types/: README.md  __init__.py
tests/: __init__.py  example_google.py  test_doctopi.py
tests/examples/config/nominal/: content_only.ini
tests/examples/config/off_nominal/: extra_key.ini  extra_section.ini
tests/formatter/: test_class_attr_commands.py  test_class_commands.py  test_docstring_commands.py  test_function_command.py  test_markdown_builder.py
tests/parser/: test_docspec_adapter.py  test_parser_factory.py
(+4 files in other folders)
